--- a/src/styles/data-table.css
+++ b/src/styles/data-table.css
@@ -1,6 +1,5 @@
 .table-body {
     width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,4 +21,22 @@ td {
 
     border: 1px solid black;
     text-align: center;
+}
+.main-container {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 150px;
+}
+
+.title-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    font-size: 64px;
+    font-weight: bolder;
+    align-items: center;
+    justify-content: center;
 }
